--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,9 +14,25 @@ include(FetchContent)
 FetchContent_Declare(
     cli11
     GIT_REPOSITORY https://github.com/CLIUtils/CLI11.git
-    GIT_TAG main
+    GIT_TAG v2.5.0
 )
 FetchContent_MakeAvailable(cli11)
+
+# FTXUI
+FetchContent_Declare(
+    ftxui
+    GIT_REPOSITORY https://github.com/ArthurSonzogni/ftxui
+    GIT_TAG        v6.0.2
+)
+FetchContent_MakeAvailable(ftxui)
+
+# magic_enum
+FetchContent_Declare(
+    magic-enum
+    GIT_REPOSITORY https://github.com/Neargye/magic_enum
+    GIT_TAG        v0.9.7
+)
+FetchContent_MakeAvailable(magic-enum)
 
 set(CMAKE_CXX_STANDARD 20)
 
@@ -31,7 +47,7 @@ target_sources(virtio-info PRIVATE
     src/config.cpp
     src/main.cpp
     src/virtio_bus.cpp
-    #src/util.cpp
+    src/ui.cpp
 )
 
 target_compile_features(virtio-info PUBLIC cxx_std_20)
@@ -39,6 +55,13 @@ target_compile_options(virtio-info PRIVATE -Wall -Wextra -pedantic -O3)
 
 target_link_libraries(virtio-info PRIVATE fmt)
 target_link_libraries(virtio-info PRIVATE CLI11::CLI11)
+target_link_libraries(virtio-info
+    PRIVATE ftxui::screen
+    PRIVATE ftxui::dom
+    PRIVATE ftxui::component
+)
+
+target_link_libraries(virtio-info PRIVATE magic_enum::magic_enum)
 
 add_custom_command(
     OUTPUT git_verhdr_gen
